--- a/SpaceX/spacex-clone/src/components/Navbar.css
+++ b/SpaceX/spacex-clone/src/components/Navbar.css
@@ -22,3 +22,28 @@
     transform-origin: left;
     transform: scaleX(1);
 }
+
+.btn {
+    color: #fff;
+    z-index: 100;
+    position: relative;
+    text-decoration: none;
+}
+
+.btn::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    bottom: 0;
+    left: 0;
+    transform-origin: top;
+    transform: scaleY(0);
+    transition: transform .3s ease-in-out;
+}
+
+.btn:hover::before {
+    transform-origin: bottom;
+    transform: scaleY(1);
+}
