--- a/SpaceX/spacex-clone/src/components/Navbar.css
+++ b/SpaceX/spacex-clone/src/components/Navbar.css
@@ -25,7 +25,6 @@
 
 .btn {
     color: #fff;
-    z-index: 100;
     position: relative;
     text-decoration: none;
 }
@@ -46,4 +45,36 @@
 .btn:hover::before {
     transform-origin: bottom;
     transform: scaleY(1);
+}
+
+span {
+    width: 10px;
+    height: 40px;
+    background: white;
+    border-radius: 5px;
+    margin: 6px;
+    animation: move 1.1s infinite ease-in-out;
+}
+
+span:nth-of-type(1) {
+    transform: rotate(-45deg);
+}
+
+span:nth-of-type(2) {
+    transform: rotate(45deg);
+}
+
+@keyframes move {
+    0% {
+        margin-top: 0;
+    }
+
+    50% {
+        margin-top: 20px;
+    }
+
+    100% {
+
+        margin-top: 0;
+    }
 }
